mudando cor da fonte no app

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
   font-family: Open Sans;
-  background-color: lightsteelblue;
+  /* background-color: lightsteelblue; */
 }
 
 h3,
 p {
-  color: white;
+  /* color: white; */
   font-weight: bold;
 }
 
